Use built-in Set constructor